--- a/ssm-motan-module/pom.xml
+++ b/ssm-motan-module/pom.xml
@@ -201,6 +201,11 @@
             <version>${zookeeper.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.jxh.web</groupId>
+            <artifactId>ssm-motan-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
