--- a/ssm-motan-web/pom.xml
+++ b/ssm-motan-web/pom.xml
@@ -177,6 +177,12 @@
             <version>${zookeeper.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.jxh.web</groupId>
+            <artifactId>ssm-motan-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
